--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,58 +1,36 @@
 name: Build
 
-# https://docs.github.com/en/actions/learn-github-actions/workflow-syntax-for-github-actions#concurrency
-concurrency: 
-  group: "build"
-  cancel-in-progress: true
-
 on:
   push:
     branches:
-      # choose your default branch
-      - master
       - main
-    paths-ignore:
-      - '*.md'
+  pull_request:
+    branches:
+      - main
+
+permissions:
+  contents: write
+  packages: write
+  actions: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@master
-        with:
-          path: "src"
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: Checkout builds
-        uses: actions/checkout@master
-        with:
-          ref: "builds"
-          path: "builds"
-      
-      - name: Clean old builds
-        run: rm $GITHUB_WORKSPACE/builds/*.cs3
-
-      - name: Setup JDK 11
+      - name: Set up Java
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: '11'
 
-      - name: Setup Android SDK
+      - name: Set up Android SDK
         uses: android-actions/setup-android@v2
+        with:
+          api-level: 30
+          build-tools: 30.0.3
 
-      - name: Build Plugins
-        run: |
-          cd $GITHUB_WORKSPACE/src
-          chmod +x gradlew
-          ./gradlew make makePluginsJson
-          cp **/build/*.cs3 $GITHUB_WORKSPACE/builds
-          cp build/plugins.json $GITHUB_WORKSPACE/builds
-
-      - name: Push builds
-        run: |
-          cd $GITHUB_WORKSPACE/builds
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
-          git add .
-          git commit --amend -m "Build $GITHUB_SHA" || exit 0   # do not error if nothing to commit
-          git push --force
+      - name: Build with Gradle
+        run: ./gradlew build
