--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,17 +22,19 @@ jobs:
           fetch-depth: 0
           path: "src"
 
-      - name: Setup JDK 11
+      - name: Setup JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: 11
+          java-version: '17'
 
       - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
+        uses: android/setup-sdk@v1
         with:
           api-level: 30
           build-tools: 30.0.3
+          cmake: 3.22.1
+          ndk: 25.1.8937393
 
       - name: Build Plugins
         run: |
