--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,26 +1,21 @@
 name: Build
 
-concurrency: 
-  group: "build"
-  cancel-in-progress: true
-
 on:
   push:
-    branches:
-      - master
-      - main
-    paths-ignore:
-      - '*.md'
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      ANDROID_HOME: /usr/local/lib/android/sdk
+      ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          path: "src"
 
       - name: Setup JDK 17
         uses: actions/setup-java@v3
@@ -29,22 +24,18 @@ jobs:
           java-version: '17'
 
       - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
+        uses: android/setup-sdk@v1
         with:
-          jdk-version: 17
-          api-level: 30
-          build-tools: 30.0.3
+          api-level: 34
+          build-tools: 34.0.0
+          ndk: 25.1.8937393
+
+      - name: Install Android Platform Tools
+        run: |
+          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --install "platform-tools"
 
       - name: Build Plugins
         run: |
           cd src
           chmod +x gradlew
           ./gradlew clean make makePluginsJson
-
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: builds
-          path: |
-            src/**/*.cs3
-            src/build/plugins.json
